salesforce/force-app/main/default/objects/InkPath_Signature_Request__c/InkPath_Signature_Request__c.object-meta.xml
<CustomObject>
    <description>An e-signature request sent via InkPath.</description>
    <label>InkPath Signature Request</label>
    <pluralLabel>InkPath Signature Requests</pluralLabel>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>