salesforce/force-app/main/default/objects/InkPath_Signature_Request__c/fields/External_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Request_Id__c</fullName>
    <label>External Request Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>