salesforce/force-app/main/default/objects/InkPath_Signature_Request__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
    <description>Id of the Salesforce record this request was sent from (any object).</description>
</CustomField>