salesforce/force-app/main/default/objects/InkPath_Signature_Request__c/fields/Request_Token__c.field-meta.xml
<CustomField>
    <fullName>Request_Token__c</fullName>
    <label>Request Token</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
    <caseSensitive>true</caseSensitive>
</CustomField>