salesforce/force-app/main/default/objects/InkPath_Signature_Request__c/fields/Signature_Type__c.field-meta.xml
<CustomField>
    <fullName>Signature_Type__c</fullName>
    <label>Signature Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Drawn</fullName><default>false</default><label>Drawn</label></value>
            <value><fullName>Typed</fullName><default>false</default><label>Typed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>