salesforce/force-app/main/default/objects/InkPath_Signature_Request__c/fields/Signed_IP__c.field-meta.xml
<CustomField>
    <fullName>Signed_IP__c</fullName>
    <label>Signed IP</label>
    <length>64</length>
    <type>Text</type>
</CustomField>