salesforce/force-app/main/default/objects/InkPath_Signature_Request__c/fields/Signer_Email__c.field-meta.xml
<CustomField>
    <fullName>Signer_Email__c</fullName>
    <label>Signer Email</label>
    <type>Email</type>
</CustomField>