salesforce/force-app/main/default/objects/InkPath_Signature_Request__c/fields/Signer_Name__c.field-meta.xml
<CustomField>
    <fullName>Signer_Name__c</fullName>
    <label>Signer Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>