salesforce/force-app/main/default/objects/InkPath_Signature_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Sent</fullName><default>false</default><label>Sent</label></value>
            <value><fullName>Signed</fullName><default>false</default><label>Signed</label></value>
            <value><fullName>Voided</fullName><default>false</default><label>Voided</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>